--- a/views/tableNoEntregados.hbs
+++ b/views/tableNoEntregados.hbs
@@ -42,22 +42,16 @@
                             <h4 class="m-0 font-weight-bold text-primary">Costo total del Pedido: ${{a_pagar}}</h4>
                         </div>
                     </div>
-
-
-
                     {{else}}
-                    
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">Repartir Pedidos</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">Asignar Repartidores a los pedidos del día de hoy: {{localTime}}</h6>
                         </div>
                         <div class="card-body">
                             <form action="/repartirPedidos" method="post">
                                 <input type="number" style="width:200px" name="repartidores" placeholder="Número de repartidores" min="1" max="{{repartidores}}" required>
-                                <button type="submit" class="btn btn-primary btn-sm bg-gradient-primary">Repartir</button>
+                                <button type="submit" class="btn btn-primary btn-sm bg-gradient-primary"> Repartir </button>
                             </form>
-                        </div>
-                    </div>
                     {{#if loading}}
                     <div class="d-flex justify-content-center">
                         <div class="spinner-border text-primary" role="status">
@@ -68,7 +62,7 @@
                     {{else}}
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">Pedidos Por Entregar</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">Lista de Pedidos: </h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -82,16 +76,15 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {{#each codped}}
+                                        {{#each pedidosHoy}}
                                         <tr>
-                                            {{#if (or (eq this.estado "No entregado") (eq this.estado "Pedido Registrado") (eq this.estado "Conductor Asignado") (eq this.estado "Conductor en Camino") ) }}
+                                            {{!-- {{#if (or (eq this.estado "No entregado") (eq this.estado "Pedido Registrado") (eq this.estado "Conductor Asignado") (eq this.estado "Conductor en Camino") ) }} --}}
                                             <th class="text-center">{{this.cod_ped}}</th>
                                             <th class="text-center">{{this.fecha_entrega}}</th>
                                             <th class="text-center">{{this.estado}}</th>
                                             <th class="text-center">
                                                 <form action="/tableNoEntregados" method="post"><input type="text" name="id" value="{{this.cod_ped}}" style="display:none;"><button type="submit" class="btn btn-primary btn-circle"><i class="fas fa-box-open"></i></button></form>
                                             </th>
-                                            {{/if}}
                                         </tr>
                                         {{/each}}
 
@@ -101,10 +94,46 @@
                         </div>
                     </div>
                     {{/if}}
-                    
-                    
-                    {{/if}}
+                        </div>
+                    </div>
+                    <hr>
+                    <hr>
+                     <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">Lista de Pedidos para días posteriores: </h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th class="text-center">Código Pedido</th>
+                                            <th class="text-center">Fecha de Entrega</th>
+                                            <th class="text-center">Estado</th>
+                                            <th class="text-center">Detalles</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {{#each pedidosDemas}}
+                                        <tr>
+                                            {{!-- {{#if (or (eq this.estado "No entregado") (eq this.estado "Pedido Registrado") (eq this.estado "Conductor Asignado") (eq this.estado "Conductor en Camino") ) }} --}}
+                                         
+                                            <th class="text-center">{{this.cod_ped}}</th>
+                                            <th class="text-center">{{this.fecha_entrega}}</th>
+                                            <th class="text-center">{{this.estado}}</th>
+                                            <th class="text-center">
+                                                <form action="/tableNoEntregados" method="post"><input type="text" name="id" value="{{this.cod_ped}}" style="display:none;"><button type="submit" class="btn btn-primary btn-circle"><i class="fas fa-box-open"></i></button></form>
+                                            </th>
+                                          
+                                        </tr>
+                                        {{/each}}
 
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    {{/if}}
                 </div>
             </div>
             {{> footer}}
