Tabla de Asignados Admin

--- a/views/partials/sidebarAdmin.hbs
+++ b/views/partials/sidebarAdmin.hbs
@@ -59,6 +59,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="/tablePedidos">Todos</a>
                         <a class="collapse-item" href="/tableNoEntregados">Por Entegar</a>
+                        <a class="collapse-item" href="/tableAsignados">Asignados</a>
                         <a class="collapse-item" href="/tablePendientes">Pendientes de Pago</a>
                     </div>
                 </div>
