--- a/views/partials/sidebarEmpleado.hbs
+++ b/views/partials/sidebarEmpleado.hbs
@@ -31,18 +31,12 @@
                     <i class="fas fa-fw fa-cash-register"></i>
                     <span>Registrar Pedido</span></a>
             </li>
+            
             <li class="nav-item">
-                <a class="nav-link" href="/pagos">
-                    <i class="fas fa-fw fa-comment-dollar"></i>
-                    <span>Pagos</span></a>
+                <a class="nav-link" href="/tableProductos">
+                    <i class="fas fa-table"></i>
+                    <span>Tabla Productos</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/factura">
-                    <i class="fas fa-fw fa-clipboard-list"></i>
-    
-                    <span>Factura</span></a>
-            </li>
-
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
