cambio de factura a Nota de venta

--- a/src/views/partials/sidebarAdmin.hbs
+++ b/src/views/partials/sidebarAdmin.hbs
@@ -76,7 +76,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Tablas Contenido:</h6>
                         <a class="collapse-item" href="/tableClientes">Clientes</a>
-                        <a class="collapse-item" href="/tableFacturas">Facturas</a>
+                        <a class="collapse-item" href="/tableFacturas">Notas de venta</a>
                         <a class="collapse-item" href="/tableProductos">Productos</a>
                         <a class="collapse-item" href="/tableProvee">Proveedores</a>
                         <a class="collapse-item" href="/tableRepartidores">Repartidores</a>                        
