--- a/src/views/tableFacturas.hbs
+++ b/src/views/tableFacturas.hbs
@@ -11,7 +11,7 @@
                      {{#if resumen}}
 
                 <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">Detalles de tu Factura</h1>
+                    <h1 class="h3 mb-4 text-gray-800">Detalles de tu Nota de venta</h1>
 
                     <form class="user text-center" action="" method="POST">
                         <input type="text" style="display: none;" value="{{cod_ped}}" name="cod_pedido">
@@ -86,7 +86,7 @@
                      {{else}}
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">Tus Facturas</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">Tus Notas de ventas</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
