--- a/src/views/tusFacturas.hbs
+++ b/src/views/tusFacturas.hbs
@@ -80,7 +80,7 @@
                             </div>
 
                         <div class="form-group ">
-                            <button class="btn btn-primary btn-lg bg-gradient-primary"><a href="tusFacturas" style="color:#DEECE8">Volver a Facturas</a></button>
+                            <button class="btn btn-primary btn-lg bg-gradient-primary"><a href="tusFacturas" style="color:#DEECE8">Volver a Notas de venta</a></button>
                         </div>
                     </form>
                 </div>              
