--- a/src/views/factura.hbs
+++ b/src/views/factura.hbs
@@ -9,7 +9,7 @@
                 <div class="container-fluid">
 
                 <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">Datos de Facturación</h1>
+                    <h1 class="h3 mb-4 text-gray-800">Datos de Nota de venta</h1>
 
                     <form class="user text-center" action="regfactura" method="POST">
                         <input type="text" style="display: none;" value="{{cod_pedido}}" name="cod_pedido">
@@ -77,7 +77,7 @@
                             </div>
 
                         <div class="form-group ">
-                            <input type="submit" class="btn btn-primary btn-lg bg-gradient-primary" value="Guardar Factura">
+                            <input type="submit" class="btn btn-primary btn-lg bg-gradient-primary" value="Guardar Nota de Venta">
                         </div>
                     </form>
                 </div>              
