--- a/src/views/partials/sidebarCliente.hbs
+++ b/src/views/partials/sidebarCliente.hbs
@@ -30,7 +30,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="tusFacturas">
                     <i class="fas fa-file-invoice"></i>
-                    <span>Facturas</span></a>
+                    <span>Notas de venta</span></a>
             </li>
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
