--- a/src/views/partials/modalLogin.hbs
+++ b/src/views/partials/modalLogin.hbs
@@ -38,7 +38,7 @@
                             </div>
 
                         <div class="form-group">
-                            <input type="text" class="form-control form-control-user" name="placa" placeholder="Número de Placa (Solo Repartidor)..." maxlength="6">
+                            <input type="text" class="form-control form-control-user" name="placa" placeholder="Número de Placa (Solo Repartidor)..." minength="6" maxlength="8">
                         </div>
 
                             <div class="form-group">
