--- a/src/views/partials/modalPedido.hbs
+++ b/src/views/partials/modalPedido.hbs
@@ -13,7 +13,7 @@
 
                         <div class="form-group">
                             <label>Fecha de Entrega:</label>
-                            <input type="date" class="form-control" id="fechaActual" name="fecha" value="" required>
+                            <input type="date" class="form-control" id="fechaActual" name="fecha" placeholder="{{currentDate}}" min={{currentDate}} required>
                         </div>
                         <hr>
                         <label>Dirección: </label>
